--- a/app-tienda/package.json
+++ b/app-tienda/package.json
@@ -13,18 +13,26 @@
     "@emotion/styled": "^11.10.5",
     "@fontsource/akshar": "^4.5.4",
     "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.5",
+    "@mui/lab": "^5.0.0-alpha.120",
+    "@mui/material": "^5.11.9",
     "@mui/x-data-grid": "^5.17.23",
     "@next/font": "13.1.4",
+    "@types/axios": "^0.14.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.3.4",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
+    "js-cookie": "^3.0.1",
     "next": "13.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.2",
     "swr": "^2.0.1",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.3"
   }
 }
