--- a/api-tienda/.env
+++ b/api-tienda/.env
@@ -2,6 +2,7 @@ POSTGRES_PORT_EXTERNAL=5431
 DB_USER=jorge
 DB_PASS=usuario
 DB_NAME=tienda
+JWT_SECRET=MiClaveSecreta
 
 DB_HOST=192.168.48.128
 DB_PORT=5431
